2006-10-08  Brian Cameron  <brian.cameron@sun.com>

	* gui/Makefile.am: Add -lX11 to link statements so that the new code
	  from Ariel that uses X atoms will build on Solaris.

2006-10-08  Brian Cameron  <brian.cameron@sun.com>

        * daemon/auth.c: Fix comment.

2006-10-08  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmcommon.c: Add missing break statement to case 't' in the
	  function gdm_common_expand_text.

2006-10-05  Brian Cameron  <brian.cameron@sun.com>

	* daemon/auth.c: Set authdir to NULL after freeing to avoid accessing
	  an invalid pointer.  Fixes bug #359831.  Patch provided by
	  Amnon Aaronsohn <bla@cs.huji.ac.il>.

2006-10-04  Ariel Rios  <ariel@gnu.org>

	Fixes bug #345434.
	* gui/gdmcommon.h (gdm_common_atspi_launch) Header for launching
	  the registry.
	* gui/gdmcommon.c (pre_atspi_launch): Execute the registry
	  that is supposed to be located on LIBEXECDIR. 
	  (filter_watch): Called whenever we get the PropertyNotify 
	  event and the we exit the gtk_main loop we are on and remove 
	  the event from the queue.
	  (filter_timeout): Function launched if after 1 second the registry
	  is not found.
	  (error_dialog): Display message saying no at-spi-registryd was found.
	  (gdm_common_atspi_launch): Launchs the registry, starts checking for
	  property changes on the X root window. If the registry is found we
	  continue executing the GUI.
	* gui/gdmlogin.c (main): Launch gdk_init and then lunch the 
	  at-spi-registry if GTK_ADD_MODULES is set on.
	* gui/greeter/greeter.c (main): Ditto.
	* docs/C/gdm.xml: Add documentation to indicate that the GUI will
	  now launch the at-spi-registryd if GTK_ADD_MODULES is set to true.

2006-10-02  Brian Cameron  <brian.cameron@sun.com>

	* NEWS: Add info about 2.16.1 release.

2006-09-27  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsetup.c:  Fix so the wm close works as the Close button
	  in the dialog.  Fixes bug #358002.  Patch by Matthias Clasen
 	  <mclasen@redhat.com>.
	  